# imGui-sdl-cmake-starter

./: CMakeLists.txt  README.md  Widgets.cpp  Widgets.h  imgui-style.h  main.cpp
glad/include/glad/: glad.h
include/: Widgets.h  imgui-style.h
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
